<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/base_items">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_item_your_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_your_music" />

        <item
            android:id="@+id/nav_item_playlist"
            android:icon="@drawable/ic_menu_playlist"
            android:title="@string/menu_playlist" />
    </group>

    <group android:id="@+id/other_items">
        <item
            android:id="@+id/nav_item_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_item_logout" />
    </group>

</menu>